landing page done

--- a/landingpage.html
+++ b/landingpage.html
@@ -4,15 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Educational Portal</title>
-  <link rel="stylesheet" href="./landingpage.css">
+  <link rel="stylesheet" href="public/css/landingpage.css">
 </head>
 <body>
-  <div class="container">
+  
     <header>
-      <h1>Educational Portal</h1>
+      <div class="container">
+        <img src="public/images/padhakoo.logo.png" alt="Padhakoo Logo" class="heading-logo" />
+        <h1>Padhakoo</h1>
+      </div>
       <p>Welcome to our comprehensive learning management system</p>
     </header>
     
+    
+
     <div class="login-options">
       <div class="login-card">
         <h2>Admin</h2>
@@ -46,6 +51,6 @@
     </footer>
   </div>
 
-  <script src="./landingpage.js"></script>
+  <script src="public/js/landingpage.js"></script>
 </body>
 </html>
