--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -1871,43 +1871,6 @@
     <div class="main-content">
       <!-- Dashboard Content -->
       <div class="dashboard-content">
-        <!-- Stats Section -->
-        <div class="stats-section">
-          <div class="section-header">
-            <h2 class="section-title">Quick Stats</h2>
-          </div>
-          <div class="stats-grid">
-            <div class="stat-card">
-              <div class="stat-icon blue">
-                <i class="fas fa-users"></i>
-              </div>
-              <div class="stat-value">248</div>
-              <div class="stat-label">Total Students</div>
-            </div>
-            <div class="stat-card">
-              <div class="stat-icon green">
-                <i class="fas fa-book"></i>
-              </div>
-              <div class="stat-value">6</div>
-              <div class="stat-label">Active Courses</div>
-            </div>
-            <div class="stat-card">
-              <div class="stat-icon orange">
-                <i class="fas fa-tasks"></i>
-              </div>
-              <div class="stat-value">14</div>
-              <div class="stat-label">Pending Assignments</div>
-            </div>
-            <div class="stat-card">
-              <div class="stat-icon red">
-                <i class="fas fa-puzzle-piece"></i>
-              </div>
-              <div class="stat-value">8</div>
-              <div class="stat-label">Active Quizzes</div>
-            </div>
-          </div>
-        </div>
-
         <!-- Course Categories -->
         <div class="categories-section">
           <div class="section-header">
@@ -1926,214 +1889,28 @@
               <div class="category-icon">
                 <i class="fas fa-flask"></i>
               </div>
-              <div class="category-name">Science</div>
+              <div class="category-name">Electronics</div>
               <div class="category-count">8 Courses</div>
             </div>
             <div class="category-card">
               <div class="category-icon">
                 <i class="fas fa-calculator"></i>
               </div>
-              <div class="category-name">Mathematics</div>
+              <div class="category-name">Computer Engineering</div>
               <div class="category-count">7 Courses</div>
             </div>
             <div class="category-card">
               <div class="category-icon">
                 <i class="fas fa-chart-line"></i>
               </div>
-              <div class="category-name">Business</div>
+              <div class="category-name">Information Technology</div>
               <div class="category-count">5 Courses</div>
             </div>
             <div class="category-card">
               <div class="category-icon">
                 <i class="fas fa-palette"></i>
               </div>
-              <div class="category-name">Arts</div>
-              <div class="category-count">6 Courses</div>
-            </div>
-          </div>
-        </div>
-
-        <!-- My Courses -->
-        <div class="courses-section">
-          <div class="section-header">
-            <h2 class="section-title">My Courses</h2>
-            <a href="#" class="view-all">View All</a>
-          </div>
-          <div class="course-cards">
-            <div class="course-card">
-              <div class="course-image">
-                <img src="/api/placeholder/300/150" alt="Course Image" />
-                <div class="course-badge">Active</div>
-              </div>
-              <div class="course-details">
-                <h3 class="course-title">Introduction to Web Development</h3>
-                <div class="course-meta">
-                  <div class="students-count">
-                    <i class="fas fa-users"></i> 42 Students
-                  </div>
-                  <div class="completion-rate">
-                    <i class="fas fa-chart-line"></i> 78% Completion
-                  </div>
-                </div>
-                <div class="course-progress">
-                  <div class="progress-bar" style="width: 78%"></div>
-                </div>
-                <div class="course-actions">
-                  <div class="action-btns">
-                    <button class="btn btn-primary">
-                      <i class="fas fa-eye"></i> View Course
-                    </button>
-                    <button class="btn btn-outline">
-                      <i class="fas fa-cog"></i>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="course-card">
-              <div class="course-image">
-                <img src="/api/placeholder/300/150" alt="Course Image" />
-                <div class="course-badge">Active</div>
-              </div>
-              <div class="course-details">
-                <h3 class="course-title">Advanced Programming Concepts</h3>
-                <div class="course-meta">
-                  <div class="students-count">
-                    <i class="fas fa-users"></i> 36 Students
-                  </div>
-                  <div class="completion-rate">
-                    <i class="fas fa-chart-line"></i> 65% Completion
-                  </div>
-                </div>
-                <div class="course-progress">
-                  <div class="progress-bar" style="width: 65%"></div>
-                </div>
-                <div class="course-actions">
-                  <div class="action-btns">
-                    <button class="btn btn-primary">
-                      <i class="fas fa-eye"></i> View Course
-                    </button>
-                    <button class="btn btn-outline">
-                      <i class="fas fa-cog"></i>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="course-card">
-              <div class="course-image">
-                <img src="/api/placeholder/300/150" alt="Course Image" />
-                <div class="course-badge">Active</div>
-              </div>
-              <div class="course-details">
-                <h3 class="course-title">Data Structures and Algorithms</h3>
-                <div class="course-meta">
-                  <div class="students-count">
-                    <i class="fas fa-users"></i> 51 Students
-                  </div>
-                  <div class="completion-rate">
-                    <i class="fas fa-chart-line"></i> 92% Completion
-                  </div>
-                </div>
-                <div class="course-progress">
-                  <div class="progress-bar" style="width: 92%"></div>
-                </div>
-                <div class="course-actions">
-                  <div class="action-btns">
-                    <button class="btn btn-primary">
-                      <i class="fas fa-eye"></i> View Course
-                    </button>
-                    <button class="btn btn-outline">
-                      <i class="fas fa-cog"></i>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Recent Activity -->
-        <div class="activity-section">
-          <div class="section-header">
-            <h2 class="section-title">Recent Activity</h2>
-          </div>
-          <div class="activity-tabs">
-            <div class="activity-tab active">All</div>
-            <div class="activity-tab">Submissions</div>
-            <div class="activity-tab">Quizzes</div>
-            <div class="activity-tab">Comments</div>
-          </div>
-          <div class="activity-list">
-            <div class="activity-item">
-              <div class="activity-icon submission">
-                <i class="fas fa-file-alt"></i>
-              </div>
-              <div class="activity-content">
-                <div class="activity-text">
-                  <strong>Alex Chen</strong> submitted Assignment #3
-                </div>
-                <div class="activity-course">
-                  <i class="fas fa-book"></i> Introduction to Web Development
-                </div>
-              </div>
-              <div class="activity-time">2 hours ago</div>
-            </div>
-            <div class="activity-item">
-              <div class="activity-icon quiz">
-                <i class="fas fa-puzzle-piece"></i>
-              </div>
-              <div class="activity-content">
-                <div class="activity-text">
-                  <strong>Maya Johnson</strong> completed Quiz #2 with 92%
-                </div>
-                <div class="activity-course">
-                  <i class="fas fa-book"></i> Data Structures and Algorithms
-                </div>
-              </div>
-              <div class="activity-time">4 hours ago</div>
-            </div>
-            <div class="activity-item">
-              <div class="activity-icon comment">
-                <i class="fas fa-comment"></i>
-              </div>
-              <div class="activity-content">
-                <div class="activity-text">
-                  <strong>Raj Patel</strong> commented on your announcement
-                </div>
-                <div class="activity-course">
-                  <i class="fas fa-book"></i> Advanced Programming Concepts
-                </div>
-              </div>
-              <div class="activity-time">Yesterday</div>
-            </div>
-            <div class="activity-item">
-              <div class="activity-icon submission">
-                <i class="fas fa-file-alt"></i>
-              </div>
-              <div class="activity-content">
-                <div class="activity-text">
-                  <strong>Emma Watson</strong> submitted Assignment #2
-                </div>
-                <div class="activity-course">
-                  <i class="fas fa-book"></i> Introduction to Web Development
-                </div>
-              </div>
-              <div class="activity-time">Yesterday</div>
-            </div>
-            <div class="activity-item">
-              <div class="activity-icon quiz">
-                <i class="fas fa-puzzle-piece"></i>
-              </div>
-              <div class="activity-content">
-                <div class="activity-text">
-                  <strong>David Kim</strong> completed Quiz #1 with 85%
-                </div>
-                <div class="activity-course">
-                  <i class="fas fa-book"></i> Advanced Programming Concepts
-                </div>
-              </div>
-              <div class="activity-time">2 days ago</div>
+              <div class="category-name">Examination Department</div>
             </div>
           </div>
         </div>
