--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -1630,7 +1630,7 @@
         }
 
         .menu-item {
-          padding: 12px 0;
+          padding: 12;
           justify-content: center;
         }
 
@@ -2101,47 +2101,80 @@
       </div>
 
       <!-- Course Management Content -->
-      <div class="course-management-content">
+      <div class="display: block">
         <!-- Content Header -->
         <div class="content-header">
-          <h1 class="content-title">Introduction to Web Development</h1>
-          <div class="content-actions">
-            <button class="btn btn-primary">
-              <i class="fas fa-plus"></i> Add Content
-            </button>
-            <button class="btn btn-outline">
-              <i class="fas fa-cog"></i> Settings
+          
+            <button class="btn btn-primary" onclick="openAddCourseModal()">
+              <i class="fas fa-plus"></i> Add New Course
             </button>
           </div>
         </div>
+      </div>
 
-        <!-- Course Info -->
-        <div class="course-info-section">
-          <div class="course-info-header">
-            <img
-              src="/api/placeholder/100/100"
-              alt="Course Image"
-              class="course-info-img"
-            />
-            <div class="course-info-details">
-              <h2 class="course-info-title">Introduction to Web Development</h2>
-              <p class="course-info-description">
-                A comprehensive introduction to web development covering HTML,
-                CSS, JavaScript, and responsive design principles.
-              </p>
-              <div class="course-info-meta">
-                <div class="info-meta-item">
-                  <i class="fas fa-users"></i> 42 Students
-                </div>
-              </div>
+      <!-- Add Course Modal -->
+      <div class="modal-overlay" id="addCourseModal">
+        <div class="modal">
+          <div class="modal-header">
+            <h2 class="modal-title">Add New Course</h2>
+            <button class="close-modal" onclick="closeAddCourseModal()">
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="courseDepartment" class="form-label"
+                >Department</label
+              >
+              <select id="courseDepartment" class="form-control" required>
+                <option value="" disabled selected>Select Department</option>
+                <option value="computer_science">Computer Science</option>
+                <option value="electronics">Electronics</option>
+                <option value="computer_engineering">
+                  Computer Engineering
+                </option>
+                <option value="information_technology">
+                  Information Technology
+                </option>
+                <option value="examination_department">
+                  Examination Department
+                </option>
+              </select>
             </div>
+            <div class="form-group">
+              <label for="courseName" class="form-label">Course Name</label>
+              <input
+                type="text"
+                id="courseName"
+                class="form-control"
+                placeholder="Enter course name"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="courseId" class="form-label">Course ID</label>
+              <input
+                type="text"
+                id="courseId"
+                class="form-control"
+                placeholder="Enter course ID"
+                required
+              />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-outline" onclick="closeAddCourseModal()">
+              Cancel
+            </button>
+            <button class="btn btn-primary" onclick="submitCourseForm()">
+              Create Course
+            </button>
           </div>
         </div>
       </div>
     </div>
   </body>
   <script>
-    // Add this to your existing JavaScript
     document.addEventListener("DOMContentLoaded", function () {
       const menuToggle = document.querySelector(".menu-toggle");
       const sidebar = document.querySelector(".sidebar");
@@ -2165,6 +2198,51 @@
         body.classList.remove("sidebar-active");
         overlay.classList.remove("active");
       });
+
+      // Modal functions
+      window.openAddCourseModal = function () {
+        document.getElementById("addCourseModal").classList.add("active");
+      };
+
+      window.closeAddCourseModal = function () {
+        document.getElementById("addCourseModal").classList.remove("active");
+        // Reset form
+        document.getElementById("courseDepartment").value = "";
+        document.getElementById("courseName").value = "";
+        document.getElementById("courseId").value = "";
+      };
+
+      window.submitCourseForm = function () {
+        const department = document.getElementById("courseDepartment").value;
+        const courseName = document.getElementById("courseName").value;
+        const courseId = document.getElementById("courseId").value;
+
+        if (!department || !courseName || !courseId) {
+          alert("Please fill in all fields");
+          return;
+        }
+
+        // Here you would typically send the data to a server
+        console.log("New Course Data:", {
+          department,
+          courseName,
+          courseId,
+        });
+
+        // Close modal and reset form
+        closeAddCourseModal();
+
+        // Optional: Add the new course to the UI
+        const categoriesGrid = document.querySelector(".categories-grid");
+        const categoryCard = document.querySelector(
+          `.category-card .category-name:contains('${department
+            .replace("_", " ")
+            .toUpperCase()}')`
+        ).parentElement;
+        const countElement = categoryCard.querySelector(".category-count");
+        const currentCount = parseInt(countElement.textContent) || 0;
+        countElement.textContent = `${currentCount + 1} Courses`;
+      };
     });
   </script>
 </html>
