some change in teachersdash-added add new crs optn1

--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -1938,8 +1938,7 @@
     <div class="sidebar">
       <div class="sidebar-header">
         <a href="#" class="logo">
-          <i class="fas fa-graduation-cap"></i>
-          <span>EduConnect</span>
+          <span>Padhakoo</span>
         </a>
       </div>
       <div class="sidebar-menu">
