--- a/public/pages/landingpage.html
+++ b/public/pages/landingpage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Educational Portal</title>
-  <link rel="stylesheet" href="css/landingpage.css">
+  <link rel="stylesheet" href="../css/landingpage.css">
 </head>
 <body>
   
@@ -34,7 +34,7 @@
       <div class="login-card">
         <h2>Student</h2>
         <p>Access courses and learning materials</p>
-        <a href="student-login.html" class="login-btn">Login as Student</a>
+        <a href="../pages/student-login.html" class="login-btn">Login as Student</a>
       </div>
     </div>
     
