theme toggle restore- icon prob still there

--- a/public/pages/teacherCourse.html
+++ b/public/pages/teacherCourse.html
@@ -22,7 +22,7 @@
           <i class="fas fa-moon"></i>
         </div>
         <div class="user-profile">
-          <img src="/api/placeholder/40/40" alt="User profile">
+            <img src="/api/placeholder/40/40" alt="User profile" />
           <span>Instructor Name</span>
         </div>
       </div>
