--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -1931,6 +1931,10 @@
       .activity-item:active {
         opacity: 0.7;
       }
+
+      body {
+        transition: background-color 0.3s ease, color 0.3s ease;
+    }
     </style>
   </head>
   <body>
@@ -2009,8 +2013,8 @@
         </div>
       </div>
       <div class="navbar-right">
-        <button class="theme-toggle">
-          <i class="fas fa-moon"></i>
+        <button class="theme-toggle" aria-label="Toggle theme">
+            <i class="fas fa-moon"></i> <!-- Or fa-sun -->
         </button>
         <div class="user-profile">
           <img
@@ -2175,6 +2179,7 @@
   </body>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
+    // Sidebar functionality
       const menuToggle = document.querySelector(".menu-toggle");
       const sidebar = document.querySelector(".sidebar");
       const body = document.body;
@@ -2197,6 +2202,37 @@
         body.classList.remove("sidebar-active");
         overlay.classList.remove("active");
       });
+
+    // Theme toggle functionality
+    const themeToggle = document.querySelector(".theme-toggle");
+    const htmlElement = document.documentElement;
+
+    // Load saved theme
+    const savedTheme = localStorage.getItem("theme") || "light";
+    htmlElement.setAttribute("data-theme", savedTheme);
+    const icon = themeToggle.querySelector("i");
+    icon.classList.toggle("fa-moon", savedTheme === "dark");
+    icon.classList.toggle("fa-sun", savedTheme === "light");
+
+    // Toggle theme on click
+    themeToggle.addEventListener("click", function () {
+    const currentTheme = htmlElement.getAttribute("data-theme") || "light";
+    const newTheme = currentTheme === "light" ? "dark" : "light";
+    htmlElement.setAttribute("data-theme", newTheme);
+
+    // Update icon properly
+    if (newTheme === "dark") {
+        icon.classList.remove("fa-sun");
+        icon.classList.add("fa-moon");
+    } else {
+        icon.classList.remove("fa-moon");
+        icon.classList.add("fa-sun");
+    }
+
+    // Save preference
+    localStorage.setItem("theme", newTheme);
+    });
+  });
 
       // Modal functions
       window.openAddCourseModal = function () {
@@ -2221,27 +2257,21 @@
           return;
         }
 
-        // Here you would typically send the data to a server
         console.log("New Course Data:", {
           department,
           courseName,
           courseId,
         });
 
-        // Close modal and reset form
-        closeAddCourseModal();
-
-        // Optional: Add the new course to the UI
         const categoriesGrid = document.querySelector(".categories-grid");
         const categoryCard = document.querySelector(
-          `.category-card .category-name:contains('${department
-            .replace("_", " ")
-            .toUpperCase()}')`
+      `.category-card .category-name:contains('${department.replace("_", " ").toUpperCase()}')`
         ).parentElement;
         const countElement = categoryCard.querySelector(".category-count");
         const currentCount = parseInt(countElement.textContent) || 0;
         countElement.textContent = `${currentCount + 1} Courses`;
+
+    closeAddCourseModal();
       };
-    });
   </script>
 </html>
