--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -1947,7 +1947,7 @@
           <i class="fas fa-home"></i>
           <span>Dashboard</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="teacherCourse.html" class="menu-item">
           <i class="fas fa-book"></i>
           <span>My Courses</span>
         </a>
