--- a/public/pages/student-login.html
+++ b/public/pages/student-login.html
@@ -62,6 +62,6 @@
     </div>
     
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script src="public/js/student-login.js"></script>
+    <script src="../js/student-login.js"></script>
 </body>
 </html>
