--- a/public/pages/teacherCourse.html
+++ b/public/pages/teacherCourse.html
@@ -22,20 +22,74 @@
           <i class="fas fa-moon"></i>
         </div>
         <div class="user-profile">
-          <img src="/api/placeholder/40/40" alt="User profile">
+            <img src="/api/placeholder/40/40" alt="User profile" />
           <span>Instructor Name</span>
         </div>
       </div>
     </header>
 
-    <nav class="sidebar">
-      <ul>
-        <li class="active"><a href="#"><i class="fas fa-book"></i> Courses</a></li>
-        <li><a href="#"><i class="fas fa-users"></i> Quizzes</a></li>
-        <li><a href="#"><i class="fas fa-chart-line"></i> Performance</a></li>
-        <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
-      </ul>
-    </nav>
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <div class="sidebar-header">
+        <a href="#" class="logo">
+          <span>Padhakoo</span>
+        </a>
+      </div>
+      <div class="sidebar-menu">
+        <div class="menu-heading">MAIN MENU</div>
+        <a href="teacherDash.html" class="menu-item">
+          <i class="fas fa-home"></i>
+          <span>Dashboard</span>
+        </a>
+        <a href="#" class="menu-item active">
+          <i class="fas fa-book"></i>
+          <span>My Courses</span>
+        </a>
+        <a href="#" class="menu-item">
+          <i class="fas fa-users"></i>
+          <span>Students</span>
+        </a>
+        <a href="#" class="menu-item">
+          <i class="fas fa-chart-line"></i>
+          <span>Analytics</span>
+        </a>
+        <div class="menu-heading">COMMUNICATION</div>
+        <a href="#" class="menu-item">
+          <i class="fas fa-bullhorn"></i>
+          <span>Announcements</span>
+        </a>
+        <a href="#" class="menu-item">
+          <i class="fas fa-comment-alt"></i>
+          <span>Messages</span>
+        </a>
+        <a href="#" class="menu-item">
+          <i class="fas fa-calendar-alt"></i>
+          <span>Calendar</span>
+        </a>
+        <div class="menu-heading">ASSESSMENT</div>
+        <a href="#" class="menu-item">
+          <i class="fas fa-tasks"></i>
+          <span>Assignments</span>
+        </a>
+        <a href="#" class="menu-item">
+          <i class="fas fa-puzzle-piece"></i>
+          <span>Quizzes</span>
+        </a>
+        <a href="#" class="menu-item">
+          <i class="fas fa-trophy"></i>
+          <span>Leaderboards</span>
+        </a>
+        <div class="menu-heading">SETTINGS</div>
+        <a href="#" class="menu-item">
+          <i class="fas fa-cog"></i>
+          <span>Settings</span>
+        </a>
+        <a href="#" class="menu-item">
+          <i class="fas fa-question-circle"></i>
+          <span>Help</span>
+        </a>
+      </div>
+    </div>
 
     <main>
       <div class="page-header">
