--- a/public/pages/teacherCourse.html
+++ b/public/pages/teacherCourse.html
@@ -8,68 +8,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/teacherCourse.css">
-<<<<<<< HEAD
   <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+
 </head>
 <body class="light-mode">
-
-  <!-- navbar
-    Navbar -->
-   <!-- <div class="navbar">
-    <div class="navbar-left">
-      <button class="menu-toggle">
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="search-bar">
-        <i class="fas fa-search"></i>
-        <input type="text" placeholder="Search courses..." />
-      </div>
-    </div>
-    <div class="navbar-right">
-      <button class="theme-toggle" aria-label="Toggle theme">
-          <i class="fas fa-moon"></i> 
-      </button>
-      <div class="user-profile">
-        <img
-          src="/api/placeholder/40/40"
-          alt="User Avatar"
-          class="user-avatar"
-        />
-        <div class="user-info">
-          <div class="user-name">Dr. Sarah Johnson</div>
-          <div class="user-role">Professor</div>
-        </div>
-        <div class="profile-dropdown">
-          <div class="dropdown-user-info">
-            <img src="/api/placeholder/60/60" alt="User Avatar" />
-            <div class="user-name">Dr. Sarah Johnson</div>
-            <div class="user-role">Professor of Computer Science</div>
-          </div>
-          <a href="#" class="dropdown-link">
-            <i class="fas fa-user"></i>
-            My Profile
-          </a>
-          <a href="#" class="dropdown-link">
-            <i class="fas fa-cog"></i>
-            Account Settings
-          </a>
-          <a href="#" class="dropdown-link">
-            <i class="fas fa-bell"></i>
-            Notifications
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-link">
-            <i class="fas fa-sign-out-alt"></i>
-            Logout
-          </a>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
   <header>
     <div class="container">
       <!-- <div class="logo">
@@ -79,8 +24,8 @@
         <ul>
           <li><a href="#" class="active">Courses</a></li>
           <li><a href="teacherDash.html">Dashboard</a></li>
-          <li><a href="#">Students</a></li>
-          <li><a href="#">Analytics</a></li>
+          <li><a href="#">Quizzes</a></li>
+          <li><a href="#">Content Hub</a></li>
         </ul>
       </nav>
       <div class="header-actions">
@@ -104,6 +49,7 @@
   </div>
   <div class="sidebar-menu">
     <div class="menu-heading">MAIN MENU</div>
+    <a href="teacher" class="menu-item">
     <a href="teacherDash.html" class="menu-item">
       <i class="fas fa-home"></i>
       <span>Dashboard</span>
@@ -157,7 +103,6 @@
     </a>
   </div>
 </div>
-
 
   <main>
     <div class="container">
@@ -339,320 +284,6 @@
   </div>
 
   <script src="../js/teacherCourse.js"></script>
+
 </body>
 </html>
-=======
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
-</head>
-<body>
-  <div class="app-container">
-    <header>
-      <div class="logo">
-        <h1>Padhakoo</h1>
-      </div>
-      <div class="header-actions">
-        <div class="theme-toggle">
-          <i class="fas fa-moon"></i>
-        </div>
-        <div class="user-profile">
-            <img src="/api/placeholder/40/40" alt="User profile" />
-          <span>Instructor Name</span>
-        </div>
-      </div>
-    </header>
-
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <div class="sidebar-header">
-        <a href="#" class="logo">
-          <span>Padhakoo</span>
-        </a>
-      </div>
-      <div class="sidebar-menu">
-        <div class="menu-heading">MAIN MENU</div>
-        <a href="teacherDash.html" class="menu-item">
-          <i class="fas fa-home"></i>
-          <span>Dashboard</span>
-        </a>
-        <a href="#" class="menu-item active">
-          <i class="fas fa-book"></i>
-          <span>My Courses</span>
-        </a>
-        <a href="#" class="menu-item">
-          <i class="fas fa-users"></i>
-          <span>Students</span>
-        </a>
-        <a href="#" class="menu-item">
-          <i class="fas fa-chart-line"></i>
-          <span>Analytics</span>
-        </a>
-        <div class="menu-heading">COMMUNICATION</div>
-        <a href="#" class="menu-item">
-          <i class="fas fa-bullhorn"></i>
-          <span>Announcements</span>
-        </a>
-        <a href="#" class="menu-item">
-          <i class="fas fa-comment-alt"></i>
-          <span>Messages</span>
-        </a>
-        <a href="#" class="menu-item">
-          <i class="fas fa-calendar-alt"></i>
-          <span>Calendar</span>
-        </a>
-        <div class="menu-heading">ASSESSMENT</div>
-        <a href="#" class="menu-item">
-          <i class="fas fa-tasks"></i>
-          <span>Assignments</span>
-        </a>
-        <a href="#" class="menu-item">
-          <i class="fas fa-puzzle-piece"></i>
-          <span>Quizzes</span>
-        </a>
-        <a href="#" class="menu-item">
-          <i class="fas fa-trophy"></i>
-          <span>Leaderboards</span>
-        </a>
-        <div class="menu-heading">SETTINGS</div>
-        <a href="#" class="menu-item">
-          <i class="fas fa-cog"></i>
-          <span>Settings</span>
-        </a>
-        <a href="#" class="menu-item">
-          <i class="fas fa-question-circle"></i>
-          <span>Help</span>
-        </a>
-      </div>
-    </div>
-
-    <main>
-      <div class="page-header">
-        <h2>Courses</h2>
-        <button id="addCourseBtn" class="btn primary"><i class="fas fa-plus"></i> Add Course</button>
-      </div>
-
-      <div class="course-grid" id="courseContainer">
-        <!-- Course cards will be loaded here dynamically -->
-        <div class="loading-spinner">
-          <i class="fas fa-spinner fa-spin"></i>
-          <p>Loading courses...</p>
-        </div>
-      </div>
-
-      <!-- Modal for adding new course -->
-      <div class="modal" id="addCourseModal">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h3>Create New Course</h3>
-            <button class="close-modal"><i class="fas fa-times"></i></button>
-          </div>
-          <div class="modal-body">
-            <form id="addCourseForm">
-              <div class="form-group">
-                <label for="courseName">Course Name</label>
-                <input type="text" id="courseName" required>
-              </div>
-              <div class="form-group">
-                <label for="department">Department</label>
-                <select id="department" required>
-                  <option value="">Select Department</option>
-                  <option value="Computer Engineering">Computer Engineering</option>
-                  <option value="Computer Science and Engineering">Computer Science and Engineering</option>
-                  <option value="Electronics and Telecommunication">Electronics and Telecommunication</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="courseDescription">Course Description (Optional)</label>
-                <textarea id="courseDescription" rows="3"></textarea>
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn secondary cancel-btn">Cancel</button>
-                <button type="submit" class="btn primary">Create Course</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal for managing course units -->
-      <div class="modal" id="manageCourseModal">
-        <div class="modal-content large">
-          <div class="modal-header">
-            <h3 id="courseTitleHeader">Course Management</h3>
-            <button class="close-modal"><i class="fas fa-times"></i></button>
-          </div>
-          <div class="modal-body">
-            <div class="course-management">
-              <div class="sidebar-nav">
-                <div class="add-unit-section">
-                  <button id="addUnitBtn" class="btn secondary full-width"><i class="fas fa-plus"></i> Add Unit</button>
-                </div>
-                <div class="units-list" id="unitsList">
-                  <!-- Units will be added here dynamically -->
-                </div>
-              </div>
-              <div class="content-area">
-                <div id="unitContent">
-                  <!-- Selected unit content will appear here -->
-                  <div class="empty-state">
-                    <i class="fas fa-book-open"></i>
-                    <p>Select a unit to view or create new content</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal for adding new unit -->
-      <div class="modal" id="addUnitModal">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h3>Add New Unit</h3>
-            <button class="close-modal"><i class="fas fa-times"></i></button>
-          </div>
-          <div class="modal-body">
-            <form id="addUnitForm">
-              <div class="form-group">
-                <label for="unitTitle">Unit Title</label>
-                <input type="text" id="unitTitle" required>
-              </div>
-              <div class="form-group">
-                <label for="unitDescription">Unit Description (Optional)</label>
-                <textarea id="unitDescription" rows="3"></textarea>
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn secondary cancel-btn">Cancel</button>
-                <button type="submit" class="btn primary">Add Unit</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal for adding new topic -->
-      <div class="modal" id="addTopicModal">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h3>Add New Topic</h3>
-            <button class="close-modal"><i class="fas fa-times"></i></button>
-          </div>
-          <div class="modal-body">
-            <form id="addTopicForm">
-              <div class="form-group">
-                <label for="topicTitle">Topic Title</label>
-                <input type="text" id="topicTitle" required>
-              </div>
-              <div class="form-group">
-                <label for="estimatedTime">Estimated Completion Time (minutes)</label>
-                <input type="number" id="estimatedTime" min="1" value="30">
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn secondary cancel-btn">Cancel</button>
-                <button type="submit" class="btn primary">Add Topic</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal for adding study material -->
-      <div class="modal" id="addMaterialModal">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h3>Add Study Material</h3>
-            <button class="close-modal"><i class="fas fa-times"></i></button>
-          </div>
-          <div class="modal-body">
-            <form id="addMaterialForm">
-              <div class="form-group">
-                <label for="materialTitle">Title</label>
-                <input type="text" id="materialTitle" required>
-              </div>
-              <div class="form-group">
-                <label for="materialType">Material Type</label>
-                <select id="materialType" required>
-                  <option value="">Select Type</option>
-                  <option value="pdf">PDF Document</option>
-                  <option value="video">Video</option>
-                  <option value="link">External Link</option>
-                </select>
-              </div>
-              <div id="pdfUploadField" class="form-group hidden">
-                <label for="pdfFile">Upload PDF</label>
-                <input type="file" id="pdfFile" accept=".pdf">
-              </div>
-              <div id="videoUploadField" class="form-group hidden">
-                <label for="videoFile">Upload Video</label>
-                <input type="file" id="videoFile" accept="video/*">
-              </div>
-              <div id="linkField" class="form-group hidden">
-                <label for="externalLink">External Link URL</label>
-                <input type="url" id="externalLink">
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn secondary cancel-btn">Cancel</button>
-                <button type="submit" class="btn primary">Add Material</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal for adding assignment -->
-      <div class="modal" id="addAssignmentModal">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h3>Create Assignment</h3>
-            <button class="close-modal"><i class="fas fa-times"></i></button>
-          </div>
-          <div class="modal-body">
-            <form id="addAssignmentForm">
-              <div class="form-group">
-                <label for="assignmentTitle">Assignment Title</label>
-                <input type="text" id="assignmentTitle" required>
-              </div>
-              <div class="form-group">
-                <label for="assignmentDescription">Instructions</label>
-                <textarea id="assignmentDescription" rows="4" required></textarea>
-              </div>
-              <div class="form-group">
-                <label for="assignmentDeadline">Deadline</label>
-                <input type="datetime-local" id="assignmentDeadline" required>
-              </div>
-              <div class="form-group">
-                <label for="assignmentAttachment">Attachment (Optional)</label>
-                <input type="file" id="assignmentAttachment">
-              </div>
-              <div class="button-group">
-                <button type="button" class="btn secondary cancel-btn">Cancel</button>
-                <button type="submit" class="btn primary">Create Assignment</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <!-- Delete confirmation modal -->
-      <div class="modal" id="deleteConfirmModal">
-        <div class="modal-content small">
-          <div class="modal-header">
-            <h3>Confirm Deletion</h3>
-            <button class="close-modal"><i class="fas fa-times"></i></button>
-          </div>
-          <div class="modal-body">
-            <p>Are you sure you want to delete this item? This action cannot be undone.</p>
-            <div class="button-group">
-              <button type="button" class="btn secondary cancel-btn">Cancel</button>
-              <button type="button" class="btn danger" id="confirmDeleteBtn">Delete</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-  </div>
-  <script src="../js/teacherCourse.js"></script>
-</body>
-</html>
->>>>>>> 5e8918aa10c007464dd906b02003a939364de3bb
