--- a/public/pages/teacherCourse.html
+++ b/public/pages/teacherCourse.html
@@ -24,8 +24,8 @@
         <ul>
           <li><a href="#" class="active">Courses</a></li>
           <li><a href="teacherDash.html">Dashboard</a></li>
-          <li><a href="#">Quizzes</a></li>
-          <li><a href="#">Content Hub</a></li>
+          <li><a href="#">Students</a></li>
+          <li><a href="#">Analytics</a></li>
         </ul>
       </nav>
       <div class="header-actions">
