--- a/public/pages/student-login.html
+++ b/public/pages/student-login.html
@@ -12,7 +12,7 @@
         <div class="login-form">
             <button class="theme-switch" id="theme-toggle">🌙</button>
             <div class="login-header">
-                <img src="public/images/padhakoo.logo.png" alt="Padhakoo Logo" class="logo">
+                <img src="../images/padhakoo.logo.png" alt="Padhakoo Logo" class="logo">
                 <h1>Padhakoo</h1>
                 <p>Student Login</p>
             </div>
