--- a/public/pages/studentCourses.html
+++ b/public/pages/studentCourses.html
@@ -16,15 +16,7 @@
     />
     <link rel="stylesheet" href="../css/studentCourses.css" />
   </head>
-  <body
-    style="
-      background: linear-gradient(
-          rgba(255, 255, 255, 0.5),
-          rgba(255, 255, 255, 0.5)
-        ),
-        url('../images/background.jpg') center center / cover no-repeat;
-    "
-  >
+  <body>
     <div class="container">
       <!-- Sidebar -->
       <div class="sidebar">
