--- a/public/pages/studentDash.html
+++ b/public/pages/studentDash.html
@@ -1307,7 +1307,7 @@
       }
     </style>
   </head>
-  <body style="background: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url('../images/background.jpg') center center / cover no-repeat;">
+  <body >
 
     <div class="container">
       <!-- Sidebar -->
