--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -2264,12 +2264,11 @@
         });
 
         const categoriesGrid = document.querySelector(".categories-grid");
-        const categoryCard = document.querySelector(
-      .category-card .category-name:contains('${department.replace("_", " ").toUpperCase()}')
-        ).parentElement;
+        const categoryCard = document.querySelector(".category-card .category-name:contains('${department.replace("_", " ").toUpperCase()}')").parentElement;
+
         const countElement = categoryCard.querySelector(".category-count");
         const currentCount = parseInt(countElement.textContent) || 0;
-        countElement.textContent = ${currentCount + 1} Courses;
+        countElement.textContent = `${currentCount + 1} Courses`;
 
     closeAddCourseModal();
       };
