--- a/public/pages/studentCourseDet.html
+++ b/public/pages/studentCourseDet.html
@@ -28,11 +28,11 @@
         </div>
         <div class="sidebar-menu">
           <div class="menu-heading">Main Menu</div>
-          <a href="index.html" class="menu-item">
+          <a href="studentDash.html" class="menu-item">
             <i class="fas fa-home"></i>
             <span>Dashboard</span>
           </a>
-          <a href="courses.html" class="menu-item courses active">
+          <a href="studentCourses.html" class="menu-item courses active">
             <i class="fas fa-book"></i>
             <span>My Courses</span>
           </a>
@@ -134,7 +134,7 @@
         <div class="course-header">
           <div
             class="back-button"
-            onclick="window.location.href='courses.html'"
+            onclick="window.location.href='studentCourses.html'"
           >
             <i class="fas fa-arrow-left"></i> Back to Courses
           </div>
