--- a/public/pages/studentDash.html
+++ b/public/pages/studentDash.html
@@ -1319,11 +1319,11 @@
         </div>
         <div class="sidebar-menu">
           <div class="menu-heading">Main Menu</div>
-          <a href="#" class="menu-item active">
+          <a href="studentDash.html" class="menu-item active">
             <i class="fas fa-home"></i>
             <span>Dashboard</span>
           </a>
-          <a href="#" class="menu-item courses">
+          <a href="studentCourses.html" class="menu-item courses">
             <i class="fas fa-book"></i>
             <span>My Courses</span>
           </a>
