--- a/public/pages/studentCourses.html
+++ b/public/pages/studentCourses.html
@@ -28,11 +28,11 @@
         </div>
         <div class="sidebar-menu">
           <div class="menu-heading">Main Menu</div>
-          <a href="index.html" class="menu-item">
+          <a href="studentDash.html" class="menu-item">
             <i class="fas fa-home"></i>
             <span>Dashboard</span>
           </a>
-          <a href="courses.html" class="menu-item courses active">
+          <a href="studentCourses.html" class="menu-item courses active">
             <i class="fas fa-book"></i>
             <span>My Courses</span>
           </a>
