--- a/public/pages/teacherCourse.html
+++ b/public/pages/teacherCourse.html
@@ -22,7 +22,7 @@
       </div> -->
       <nav>
         <ul>
-          <li><a href="#" class="active">Courses</a></li>
+          <li><a href="teacherCourse.html" class="active">Courses</a></li>
           <li><a href="teacherDash.html">Dashboard</a></li>
           <li><a href="#">Students</a></li>
           <li><a href="#">Analytics</a></li>
