--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -1947,7 +1947,7 @@
       </div>
       <div class="sidebar-menu">
         <div class="menu-heading">MAIN MENU</div>
-        <a href="#" class="menu-item active">
+        <a href="teacherDash.html" class="menu-item active">
           <i class="fas fa-home"></i>
           <span>Dashboard</span>
         </a>
