--- a/public/pages/studentCourses.html
+++ b/public/pages/studentCourses.html
@@ -161,7 +161,7 @@
             onclick="window.location.href='studentCourseDet.html'"
           >
             <div class="course-image">
-              <img src="/api/placeholder/400/200" alt="Course" />
+              <img src="../images/course-image1.jpg" alt="Course" />
               <div class="course-badge">In Progress</div>
             </div>
             <div class="course-details">
@@ -210,7 +210,7 @@
             onclick="window.location.href='studentCourseDet.html'"
           >
             <div class="course-image">
-              <img src="/api/placeholder/400/200" alt="Course" />
+              <img src="../images/course-image2.jpg" alt="Course" />
               <div class="course-badge">In Progress</div>
             </div>
             <div class="course-details">
@@ -257,7 +257,7 @@
             onclick="window.location.href='studentCourseDet.html'"
           >
             <div class="course-image">
-              <img src="/api/placeholder/400/200" alt="Course" />
+              <img src="../images/course-image3.jpg" alt="Course" />
               <div class="course-badge">Not Started</div>
             </div>
             <div class="course-details">
@@ -304,7 +304,7 @@
             onclick="window.location.href='studentCourseDet.html'"
           >
             <div class="course-image">
-              <img src="/api/placeholder/400/200" alt="Course" />
+              <img src="../images/course-image4.jpg" alt="Course" />
               <div class="course-badge">Completed</div>
             </div>
             <div class="course-details">
@@ -351,7 +351,7 @@
             onclick="window.location.href='studentCourseDet.html'"
           >
             <div class="course-image">
-              <img src="/api/placeholder/400/200" alt="Course" />
+              <img src="../images/course-image5.jpg" alt="Course" />
               <div class="course-badge">In Progress</div>
             </div>
             <div class="course-details">
@@ -398,7 +398,7 @@
             onclick="window.location.href='studentCourseDet.html'"
           >
             <div class="course-image">
-              <img src="/api/placeholder/400/200" alt="Course" />
+              <img src="../images/course-image6.jpg" alt="Course" />
               <div class="course-badge">In Progress</div>
             </div>
             <div class="course-details">
